Updatated fetching not to use caching.

--- a/index.html
+++ b/index.html
@@ -9487,7 +9487,7 @@ var _user$project$Main$FetchedValues = function (a) {
 	return {ctor: 'FetchedValues', _0: a};
 };
 var _user$project$Main$getTrainedValues = function () {
-	var url = '/values.json';
+	var url = '/values.json?';
 	return A2(
 		_elm_lang$http$Http$send,
 		_user$project$Main$FetchedValues,
