Update index styles.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Emanuel Geromin -- Homepage</title>
+<title>Emanuel Geromin - Homepage</title>
 <link rel="stylesheet" href="/homepage.css" />
 
 </head>
