--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <title>Emanuel Geromin - Homepage</title>
 <link rel="stylesheet" href="/homepage.css" />
+    <meta name="viewport" content="width=device-width,
+    initial-scale=1.0"></meta>
 
 </head>
 <body>
