--- a/trees/index.html
+++ b/trees/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spring 2025 - Welsberg Tree-Planting - 70 Trees</title>
+    <title>Spring 2025 Tree-Planting Project</title>
     <style>
         * {
             margin: 0;
@@ -224,7 +224,7 @@
 <body>
 <div class="container">
     <header>
-        <h1>Spring 2025 - Welsberg Tree-Planting - 70 Trees</h1>
+        <h1>Spring 2025 Tree-Planting Project</h1>
         <p class="quote">"Südtirol: All German planning, all Italian execution" - N. Wilson</p>
     </header>
 
